# RedHillEngine

./: .gitignore  README.md  RedHillEngine.sln
RedHill/: RedHill.sln
RedHill/Dependecies/GLAD/include/glad/: glad.h
RedHill/RedHill/: RedHill.vcxproj  RedHill.vcxproj.filters
RedHill/RedHill/src/: glad.c  main.cpp
RedHill/RedHill/src/OpenGL/: GraphicsOGL.cpp  GraphicsOGL.h  ShaderHandler.cpp  ShaderHandler.h
RedHill/RedHill/src/Renderer/: RheVulkan.cpp  RheVulkan.h
RedHill/RedHill/src/Shaders/GLSL/: triangleFragment.glsl  triangleVertex.glsl
RedHill/intermediates/Debug-x64/: RedHill.exe.recipe  vc142.idb
RedHill/intermediates/Debug-x64/RedHill.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RedHill.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RedHillEngine/: CMakeLists.txt  RedHillEngine.cpp  RedHillEngine.h  RedHillEngine.vcxproj  RedHillEngine.vcxproj.filters
RedHillEngine/src/: RedHill.h
RedHillEngine/src/RedHill/: Application.cpp  Application.h  Core.h
RedHillSandbox/: RedHillSandbox.vcxproj  SandboxApp.cpp
