# CMakeList.txt : CMake project for RedHillEngine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("RedHillEngine")

# Add source to this project's executable.
add_executable (RedHillEngine "RedHillEngine.cpp" "RedHillEngine.h")

# TODO: Add tests and install targets if needed.
